2013-05-02  Tobias Burnus  <burnus@net-b.de>

PR fortran/57142
        * simplify.c (gfc_simplify_size): Renamed from
        simplify_size; fix kind=8 handling.
        (gfc_simplify_size): New function.
        (gfc_simplify_shape): Add range check.
        * resolve.c (resolve_function): Fix handling
        for ISYM_SIZE.

2013-05-02  Tobias Burnus  <burnus@net-b.de>

        PR fortran/57142
        * gfortran.dg/size_kind_2.f90: New.
        * gfortran.dg/size_kind_3.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@198549 138bc75d-0d04-0410-961f-82ee72b054a4